SERVER-73127 Add feature flag check before creating indexes in config.shard.indexes collection