src/mongo/db/repl/replication_coordinator_external_state_impl.cpp
@@ -1009,42 +1009,44 @@ void ReplicationCoordinatorExternalStateImpl::_shardingOnTransitionToPrimaryHook
                                         "shard's first transition to primary"));
         }
 
-        // Create indexes in config.shard.indexes if needed.
-        indexStatus = sharding_util::createGlobalIndexesIndexes(opCtx);
-        if (!indexStatus.isOK()) {
-            // If the node is shutting down or it lost quorum just as it was becoming primary,
-            // don't run the sharding onStepUp machinery. The onStepDown counterpart to these
-            // methods is already idempotent, so the machinery will remain in the stepped down
-            // state.
-            if (ErrorCodes::isShutdownError(indexStatus.code()) ||
-                ErrorCodes::isNotPrimaryError(indexStatus.code())) {
-                return;
+        if (mongo::feature_flags::gGlobalIndexesShardingCatalog.isEnabledAndIgnoreFCV()) {
+            // Create indexes in config.shard.indexes if needed.
+            indexStatus = sharding_util::createGlobalIndexesIndexes(opCtx);
+            if (!indexStatus.isOK()) {
+                // If the node is shutting down or it lost quorum just as it was becoming primary,
+                // don't run the sharding onStepUp machinery. The onStepDown counterpart to these
+                // methods is already idempotent, so the machinery will remain in the stepped down
+                // state.
+                if (ErrorCodes::isShutdownError(indexStatus.code()) ||
+                    ErrorCodes::isNotPrimaryError(indexStatus.code())) {
+                    return;
+                }
+                fassertFailedWithStatus(
+                    6280501,
+                    indexStatus.withContext(str::stream()
+                                            << "Failed to create index on "
+                                            << NamespaceString::kShardIndexCatalogNamespace
+                                            << " on shard's first transition to primary"));
             }
-            fassertFailedWithStatus(
-                6280501,
-                indexStatus.withContext(str::stream()
-                                        << "Failed to create index on "
-                                        << NamespaceString::kShardIndexCatalogNamespace
-                                        << " on shard's first transition to primary"));
-        }
 
-        // Create indexes in config.shard.collections if needed.
-        indexStatus = sharding_util::createShardCollectionCatalogIndexes(opCtx);
-        if (!indexStatus.isOK()) {
-            // If the node is shutting down or it lost quorum just as it was becoming primary,
-            // don't run the sharding onStepUp machinery. The onStepDown counterpart to these
-            // methods is already idempotent, so the machinery will remain in the stepped down
-            // state.
-            if (ErrorCodes::isShutdownError(indexStatus.code()) ||
-                ErrorCodes::isNotPrimaryError(indexStatus.code())) {
-                return;
+            // Create indexes in config.shard.collections if needed.
+            indexStatus = sharding_util::createShardCollectionCatalogIndexes(opCtx);
+            if (!indexStatus.isOK()) {
+                // If the node is shutting down or it lost quorum just as it was becoming primary,
+                // don't run the sharding onStepUp machinery. The onStepDown counterpart to these
+                // methods is already idempotent, so the machinery will remain in the stepped down
+                // state.
+                if (ErrorCodes::isShutdownError(indexStatus.code()) ||
+                    ErrorCodes::isNotPrimaryError(indexStatus.code())) {
+                    return;
+                }
+                fassertFailedWithStatus(
+                    6711907,
+                    indexStatus.withContext(str::stream()
+                                            << "Failed to create index on "
+                                            << NamespaceString::kShardCollectionCatalogNamespace
+                                            << " on shard's first transition to primary"));
             }
-            fassertFailedWithStatus(
-                6711907,
-                indexStatus.withContext(str::stream()
-                                        << "Failed to create index on "
-                                        << NamespaceString::kShardCollectionCatalogNamespace
-                                        << " on shard's first transition to primary"));
         }
     }
     if (serverGlobalParams.clusterRole == ClusterRole::None) {  // unsharded
